--- a/starship.toml
+++ b/starship.toml
@@ -1,41 +1,73 @@
 format = """
-[░▒▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
+[ 󰣇 ](bg:#394260 fg:#1792D0)\
 $directory\
-[](fg:#769ff0 bg:#394260)\
+[▓▒░](#394260)\
+$fill\
+[░▒▓](#394260)\
+$jobs\
+$sudo\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#212736)\
 $nodejs\
 $rust\
 $golang\
 $php\
-[](fg:#212736 bg:#1d2230)\
 $time\
-[ ](fg:#1d2230)\
 \n$character"""
 
+# format = """
+# [ 󰣇 ](bg:#394260 fg:#1792D0)\
+# $directory\
+# $jobs\
+# $sudo\
+# $git_branch\
+# $git_status\
+# $nodejs\
+# $rust\
+# $golang\
+# $php\
+# $time\
+# [▓▒░](#394260)\
+# \n$character"""
+
+
+[jobs]
+format = '[ $symbol$number ]($style)'
+symbol = ' 󰒲 '
+number_threshold = 2
+symbol_threshold = 1
+style = "fg:#a0a9cb bg:#394260"
+
+
+[sudo]
+format = '[$symbol]($style)'
+style = "fg:#a0a9cb bg:#394260"
+symbol = ''
+disabled = false
+
+[fill]
+symbol = " "
+
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "fg:#e5e5e5 bg:#394260"
 format = "[ $path ]($style)"
 truncation_length = 3
-truncation_symbol = "…/"
+truncation_symbol = ""
 
 [directory.substitutions]
-"Documents" = " "
-"Downloads" = " "
-"Music" = " "
-"Pictures" = " "
+"Documents" = " 󰈙 "
+"Downloads" = "  "
+"Music" = "  "
+"Pictures" = "  "
 
 [git_branch]
 symbol = ""
 style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+format = '[[ $symbol $branch ](fg:#a0ffcb bg:#394260)]($style)'
 
 [git_status]
 style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+format = '[[($all_status$ahead_behind )](fg:#e5a9cb bg:#394260)]($style)'
 
 [nodejs]
 symbol = ""
@@ -48,7 +80,7 @@ style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [golang]
-symbol = "ﳑ"
+symbol = ""
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
@@ -58,8 +90,8 @@ style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [time]
-disabled = true
+disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
-
+style = 'bg:#394260'
+# style = 'underline bg:#394260'
+format = '[[ [$time]($style)  ](fg:#a0a9cb bg:#394260)]($style)'
