Pywal support and edits to waybar and sink switching

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,13 +11,12 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
-exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
-exec-once = pypr
+exec-once = ~/.config/hypr/scripts/change_colors.sh -r
+exec = pypr
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
+exec = ~/.config/waybar/scripts/keyboard-layout-switcher.sh next; pkill -RTMIN+3 waybar
 
 input {
-    # kb_layout = ee
-    # kb_variant = 
     kb_layout = us, us, ee
     kb_variant = ,colemak_dh,  
     kb_model =
@@ -37,13 +36,10 @@ input {
 }
 
 general {
-    # gaps_in = 3
     gaps_out = 6
     border_size = 2
-    col.active_border = rgba(00000000)
-    col.inactive_border = rgba(bbeeffee) rgba(00000000) 45deg
-    # col.active_border = rgba(FBF1C7ff) rgba(00000000) 45deg
-    # col.inactive_border = rgba(ffffff33)
+    col.active_border = rgba(282828ff)
+    col.inactive_border = rgba(bbeeffee) rgba(282828ff) 45deg
 
     layout = dwindle
 }
@@ -69,6 +65,7 @@ decoration {
     }
 
     blurls = lockscreen
+    blurls = wofi
 
     drop_shadow = yes
     shadow_range = 30
@@ -255,11 +252,13 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , xf86AudioNext, exec, playerctl next
 
 bindl = , XF86Display, exec, playerctl play-pause; pkill -RTMIN+9 waybar
+
 #--Keyboard layout switcher-----------------------------------------------
-bindl = $mainMod, SPACE, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next; pkill -RTMIN+3 waybar
+bindl = $mainMod, SPACE, exec, ~/.config/waybar/scripts/keyboard-layout-switcher.sh next; pkill -RTMIN+3 waybar
 
 #--Opening and closing lid------------------------------------------------
 bindl = , switch:on:Lid Switch/lid events,  dpms, off
 bindl = , switch:off:Lid Switch/lid events, dpms, on
-# bindl=,switch:Lid Switch,exec,swaylock
+bindl = ,switch:Lid Switch,exec,swaylock
+# bindl = , switch:on:Lid Switch,exec,systemctl suspend
 
