--- a/swaylock/config
+++ b/swaylock/config
@@ -1,10 +1,11 @@
+image=$HOME/.cache/current_wallpaper.jpg
+
 ignore-empty-password
 daemonize
 fade-in=0.7
 indicator
 clock
 datestr=%d/%m/%Y
-screenshots
 indicator-caps-lock
 bs-hl-color=80aa9ecc
 caps-lock-bs-hl-color=80aa9ecc
@@ -14,26 +15,26 @@ font-size=50
 indicator-idle-visible
 indicator-radius=150
 indicator-thickness=15
-inside-color=32302f66
+inside-color=ffffff00
 inside-clear-color=8bba7f66
 inside-caps-lock-color=f2853466
 inside-ver-color=80aa9e66
 inside-wrong-color=f2594b66
-key-hl-color=e2cca9ff
+key-hl-color=707070ff
 layout-bg-color=32302f00
-layout-text-color=e2cca944
+layout-text-color=e2cca900
 line-color=00000000
-ring-color=D55C0Dcc
+ring-color=F4F4E8cc
 ring-clear-color=8bba7fcc
 ring-caps-lock-color=f28534cc
 ring-ver-color=80aa9ecc
 ring-wrong-color=f2594bcc
 separator-color=00000000
-text-color=e2cca9
+text-color=e4e4e4
 text-clear-color=
-text-caps-lock-color=e2cca9
-text-ver-color=e2cca9
-text-wrong-color=e2cca9
+text-caps-lock-color=e4e4e4
+text-ver-color=e4e4e4
+text-wrong-color=e4e4e4
 grace=2
-effect-blur=10x10
-effect-vignette=0.5:0.5
+effect-blur=8x8
+effect-vignette=0.3:0.3
