--- a/starship.toml
+++ b/starship.toml
@@ -1,23 +1,9 @@
-format = """
-[ 󰣇 ](bg:#394260 fg:#1792D0)\
-$directory\
-[▓▒░](#394260)\
-$fill\
-[░▒▓](#394260)\
-$jobs\
-$sudo\
-$git_branch\
-$git_status\
-$nodejs\
-$rust\
-$golang\
-$php\
-$time\
-\n$character"""
-
 # format = """
 # [ 󰣇 ](bg:#394260 fg:#1792D0)\
 # $directory\
+# [▓▒░](#394260)\
+# $fill\
+# [░▒▓](#394260)\
 # $jobs\
 # $sudo\
 # $git_branch\
@@ -27,71 +13,85 @@ $time\
 # $golang\
 # $php\
 # $time\
-# [▓▒░](#394260)\
 # \n$character"""
-
-
-[jobs]
-format = '[ $symbol$number ]($style)'
-symbol = ' 󰒲 '
-number_threshold = 2
-symbol_threshold = 1
-style = "fg:#a0a9cb bg:#394260"
-
-
-[sudo]
-format = '[$symbol]($style)'
-style = "fg:#a0a9cb bg:#394260"
-symbol = ''
-disabled = false
-
-[fill]
-symbol = " "
-
-[directory]
-style = "fg:#e5e5e5 bg:#394260"
-format = "[ $path ]($style)"
-truncation_length = 3
-truncation_symbol = ""
-
-[directory.substitutions]
-"Documents" = " 󰈙 "
-"Downloads" = "  "
-"Music" = "  "
-"Pictures" = "  "
-
-[git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#a0ffcb bg:#394260)]($style)'
-
-[git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#e5a9cb bg:#394260)]($style)'
-
-[nodejs]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[rust]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[golang]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[php]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[time]
-disabled = false
-time_format = "%R" # Hour:Minute Format
-style = 'bg:#394260'
-# style = 'underline bg:#394260'
-format = '[[ [$time]($style)  ](fg:#a0a9cb bg:#394260)]($style)'
+#
+# # format = """
+# # [ 󰣇 ](bg:#394260 fg:#1792D0)\
+# # $directory\
+# # $jobs\
+# # $sudo\
+# # $git_branch\
+# # $git_status\
+# # $nodejs\
+# # $rust\
+# # $golang\
+# # $php\
+# # $time\
+# # [▓▒░](#394260)\
+# # \n$character"""
+#
+#
+# [jobs]
+# format = '[ $symbol$number ]($style)'
+# symbol = ' 󰒲 '
+# number_threshold = 2
+# symbol_threshold = 1
+# style = "fg:#a0a9cb bg:#394260"
+#
+#
+# [sudo]
+# format = '[$symbol]($style)'
+# style = "fg:#a0a9cb bg:#394260"
+# symbol = ''
+# disabled = false
+#
+# [fill]
+# symbol = " "
+#
+# [directory]
+# style = "fg:#e5e5e5 bg:#394260"
+# format = "[ $path ]($style)"
+# truncation_length = 3
+# truncation_symbol = ""
+#
+# [directory.substitutions]
+# "Documents" = " 󰈙 "
+# "Downloads" = "  "
+# "Music" = "  "
+# "Pictures" = "  "
+#
+# [git_branch]
+# symbol = ""
+# style = "bg:#394260"
+# format = '[[ $symbol $branch ](fg:#a0ffcb bg:#394260)]($style)'
+#
+# [git_status]
+# style = "bg:#394260"
+# format = '[[($all_status$ahead_behind )](fg:#e5a9cb bg:#394260)]($style)'
+#
+# [nodejs]
+# symbol = ""
+# style = "bg:#212736"
+# format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+#
+# [rust]
+# symbol = ""
+# style = "bg:#212736"
+# format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+#
+# [golang]
+# symbol = ""
+# style = "bg:#212736"
+# format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+#
+# [php]
+# symbol = ""
+# style = "bg:#212736"
+# format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+#
+# [time]
+# disabled = false
+# time_format = "%R" # Hour:Minute Format
+# style = 'bg:#394260'
+# # style = 'underline bg:#394260'
+# format = '[[ [$time]($style)  ](fg:#a0a9cb bg:#394260)]($style)'
