nvim, hyprland and waybar changes mostly

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,8 @@
 monitor=,preferred,auto,1,
+# monitor=HDMI-A-1,preferred,0x0,2,
+# monitor=eDP-1,preferred,0x1080,1,
+# monitor=,preferred,auto,1,mirror,HDMI-A-1
 
-# monitor=eDP-1, 1920x1200, 0x1440, 1
-# monitor=DP-3, 2560x1440, 0x0, 1
 
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
@@ -11,10 +12,17 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # used for
 exec-once = waybar # The top bar
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
-exec-once = ~/.config/hypr/scripts/change_colors.sh -r
-exec = pypr
+exec-once = ~/.config/waybar/scripts/change_colors.sh -r
+exec-once = pypr
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
+exec-once = swayidledefault
+exec-once = /home/janmar6/.local/bin/udev_scripts/charging_sound.sh
+exec-once = gammastep -l 58.38062:26.72509
+
+
 exec = ~/.config/waybar/scripts/keyboard-layout-switcher.sh next; pkill -RTMIN+3 waybar
+exec-once = sway-audio-idle-inhibit
+exec = pypr relayout 
 
 input {
     kb_layout = us, us, ee
@@ -39,9 +47,11 @@ general {
     gaps_out = 6
     border_size = 2
     col.active_border = rgba(282828ff)
-    col.inactive_border = rgba(bbeeffee) rgba(282828ff) 45deg
+    # col.inactive_border = rgba(bbeeffee) rgba(282828ff) 45deg
+    col.inactive_border = rgba(555555ff)
 
     layout = dwindle
+    resize_on_border = true
 }
 
 misc {
@@ -64,13 +74,15 @@ decoration {
         # contrast = 0.98
     }
 
-    blurls = lockscreen
-    blurls = wofi
+    # blurls = lockscreen
+    # blurls = wofi
 
-    drop_shadow = yes
-    shadow_range = 30
-    shadow_render_power = 4
-    col.shadow = rgba(161616ee)
+    # DROP SHADOW
+
+    # drop_shadow = yes
+    # shadow_range = 30
+    # shadow_render_power = 4
+    # col.shadow = rgba(161616ee)
 
 }
 
@@ -99,9 +111,9 @@ gestures {
     workspace_swipe = on
 }
 
-# Per device config
+Per device config
 device:the-anglerfish-keyboard {
-    kb_layout = us
+    kb_layout = ee
     kb_variant =
     kb_model =
     kb_options=
@@ -124,10 +136,10 @@ windowrulev2 = opacity 1.0 0.7,class:^(thunar)$
 windowrulev2 = opacity 0.95 0.8,class:^(VSCodium)$
 windowrulev2 = opacity 0.9 0.75,class:^(Alacritty)$
 
-windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
-windowrulev2 = animation popin,class:^(thunar)$
-windowrulev2 = animation popin,class:^(chromium)$
-windowrulev2 = animation slide,class:^(wofi)$
+# windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
+# windowrulev2 = animation popin,class:^(thunar)$
+# windowrulev2 = animation popin,class:^(chromium)$
+# windowrulev2 = animation slide,class:^(wofi)$
 
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 
@@ -193,6 +205,7 @@ bind = $mainMod SHIFT, left, movewindow,l
 bind = $mainMod SHIFT, right, movewindow,r
 
 # bind = SUPER SHIFT, E, exec, [workspace 7 silent] firefox - Doesn't work, bug.
+bind = $mainMod SHIFT CTRL, R, exec, hyprctl dispatch exit # Restart hyprland
 
 bind = $mainMod, C, killactive, # close the active window
 bind = $mainMod, L, exec, swaylock # Lock the screen
@@ -202,17 +215,29 @@ bind = $mainMod, V, togglefloating, # Allow a window to float
 bind = $mainMod, F, fullscreen, # fullscreen
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, B, exec, .config/hypr/scripts/wbar_toggle.sh # Waybar toggle
+bind = $mainMod SHIFT, B, exec, .config/hypr/scripts/wbar_toggle.sh # Waybar toggle
+bind = $mainMod, B, exec, pkill -SIGUSR1 waybar # Waybar toggle
+# bind = $mainMod SHIFT, B, exec, pkill -SIGUSR2 waybar # Reload waybar
+bind = $mainMod, T, exec, ~/.local/bin/time_and_battery.sh # Show Time and battery with dunst
 # Game mode
-bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
+bind = $mainMod, G, exec, ~/.config/hypr/scripts/gamemode.sh
+bind = $mainMod, Y, exec, ~/.config/hypr/scripts/opacity_toggle.sh
+bind = $mainMod, H, exec, ~/.config/hypr/scripts/blur_dropshadow_toggle.sh
+# Wallpaper
+bind = $mainMod, U, exec, /home/janmar6/.config/waybar/scripts/light_and_dark.sh
+bind = $mainMod, I, exec, ~/.config/waybar/scripts/change_colors.sh -r
+bind = $mainMod SHIFT, I, exec, ~/.config/waybar/scripts/change_colors.sh
 
+
+# bind = $mainMod, X, exec, pypr expose
 
 #--Applications-----------------------------------------------------------
-bindr = SUPER, SUPER_L, exec, pkill wofi || wofi # Launching wofi
+bindr = $mainMod, SPACE, exec, pkill wofi || wofi # Launching wofi
+bindr = $mainMod, COMMA, exec, pkill wofi || bemoji -nt
 bind = $mainMod, RETURN, exec, alacritty  # open the terminal
 bind = $mainMod, W, exec, firefox  # open firefox
 bind = $mainMod, E, exec, thunar # Show Thunar
-bind = $mainMod, D, exec, pypr toggle term && hyprctl dispatch bringactivetop
+# bind = $mainMod, D, exec, pypr toggle term
 bind = $mainMod, Z, exec, pypr zoom
 
 #--Screenshot-------------------------------------------------------------
@@ -221,12 +246,14 @@ bind = $mainMod SHIFT, S, exec, slurp | grim -g - - | wl-copy # take a cropped s
 bind = $mainMod CTRL, S, exec, grim - | swappy -f - # take a fullscreen screenshot into swappy
 bind = $mainMod CTRL SHIFT, S, exec, slurp | grim -g - - | swappy -f - # take a cropped screenshot into swappy
 
+bind = $mainMod ALT, S, exec, ~/.local/bin/screentooldir/screentool
+
 # OCR
-bind = $mainMod, A, exec, slurp -b 00000055 -c ffffff55 | grim -g - - | tesseract -l est+eng - - | wl-copy
+bind = $mainMod, O, exec, ~/.local/bin/screentooldir/ocr.sh
 
 # Colorpicker
-bind = $mainMod, G, exec, grim -g "$(slurp -p -b 00000000)" -t ppm - | convert - -format '%[pixel:p{0,0}]' txt:- | tail -n 1 | tr -s " " | cut -d " " -f 3 | tr --delete "\n"| wl-copy
-bind = $mainMod SHIFT, G, exec, grim -g "$(slurp -p -b 00000000)" -t ppm - | convert - -format '%[pixel:p{0,0}]' txt:- | tail -n 1 | tr -s " " | cut -d " " -f 2 | tr --delete "\n"| wl-copy
+bind = $mainMod, P, exec, ~/.local/bin/screentooldir/colorpicker.sh hex
+bind = $mainMod SHIFT, P, exec, ~/.local/bin/screentooldir/colorpicker.sh rgb
 
 
 #--Brightness-------------------------------------------------------------
@@ -240,25 +267,32 @@ bindle = , xf86audioraisevolume, exec, ~/.config/hypr/scripts/audio.sh 5
 bindle = , xf86audiolowervolume, exec, ~/.config/hypr/scripts/audio.sh -5
 bindle = $mainMod, xf86audioraisevolume, exec, ~/.config/hypr/scripts/audio.sh 1
 bindle = $mainMod, xf86audiolowervolume, exec, ~/.config/hypr/scripts/audio.sh -1
-bindl = , xf86audioMute, exec, amixer set Master toggle
+bindl = , xf86audioMute, exec, ~/.config/hypr/scripts/audio.sh mute
+
+# change Audio output
+bindl = $mainMod, A, exec, ~/.config/waybar/scripts/wofi_audio_output.sh
 
 # Microphone mute
 bindl = , xf86audiomicMute, exec, pamixer --default-source -t
 
 
 #--Media Control----------------------------------------------------------
-bindl = , xf86AudioPlay, exec, playerctl play-pause
+bindl = , xf86AudioPlay, exec, playerctl play-pause; pkill -RTMIN+9 waybar
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , xf86AudioNext, exec, playerctl next
 
 bindl = , XF86Display, exec, playerctl play-pause; pkill -RTMIN+9 waybar
 
 #--Keyboard layout switcher-----------------------------------------------
-bindl = $mainMod, SPACE, exec, ~/.config/waybar/scripts/keyboard-layout-switcher.sh next; pkill -RTMIN+3 waybar
+bindl = $ALT, SPACE, exec, ~/.config/waybar/scripts/keyboard-layout-switcher.sh next; pkill -RTMIN+3 waybar
 
 #--Opening and closing lid------------------------------------------------
-bindl = , switch:on:Lid Switch/lid events,  dpms, off
-bindl = , switch:off:Lid Switch/lid events, dpms, on
-bindl = ,switch:Lid Switch,exec,swaylock
-# bindl = , switch:on:Lid Switch,exec,systemctl suspend
+
+# Trigger when toggled.
+bindl=,switch:Lid Switch,exec, ~/.local/bin/monitor-toggle
+# trigger when the switch is turning on.
+bindl=,switch:off:Lid Switch,exec, hyprctl dispatch dpms on
+# trigger when the switch is turning off.
+# bindl=,switch:on:Lid Switch,exec, hyprctl dispatch dpms off
+# bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 
