--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,21 +1,39 @@
 
+
 # start window indexing at one instead of zero
 set -g base-index 1
 set -g pane-base-index 1
-
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config file"
 set -g prefix C-t
 
-set -g mouse on
-bind '\' split-window -h
-bind '-' split-window -v
+unbind r
+unbind '\'
+unbind '"'
+unbind 'f'
+# unbind 'a'
 
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded tmux config file"
+bind 'f' resize-pane -Z
+# bind 'a' if-shell -F "#{window_zoomed_flag}"  'select-pane -t :.+; resize-pane -Z'     'select-pane -t :.+'
+bind-key -n 'c-l' if-shell -F "#{window_zoomed_flag}"  'select-pane -t :.+; resize-pane -Z'     'select-pane -t :.+'
+# bind-key -n 'c-Tab' display "pressed control-tab"
+# bind-key -n 'c-o' next-window
+# bind-key C-S-Tab previous-window
+bind 'c'  new-window      -c "#{pane_current_path}"
+bind '|'  split-window -h -c "#{pane_current_path}"
+bind '-' split-window -v -c "#{pane_current_path}"
+bind-key 'b' set-option status
+# bind-key 'c-F1' set-option status on
+
+
+set -g mouse on
 prfx="#{?client_prefix,<Prefix>,}"
 set -g status-right "${prfx}"
 
 
-# Tmux Appearance -------------------- {{{
+# Tmux Appearance --------------------
+set -g pane-active-border-style fg=#eeeeee
+set -g pane-border-style fg=#404040
+
 set -g status-left " #S "
 set -g status-left-length 13
 set -g status-left-style fg=default,bold,bg=default
@@ -26,18 +44,16 @@ set -g window-status-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I
 
 
 set-option -g message-style bg=#1d2021,fg=#fe8019
+set-option -sa terminal-features ',alacritty:RGB'
+set-option -sg escape-time 10
+set-option -g focus-events on
 
 
 # Widgets
 set -g status-style fg=colour241,bg=#1d2021
-# #h hostshort , #S session , #W window , #T pane name
-wg_prfx=" #[fg=#504954,bg=default]#{?client_prefix,<Prefix>,}"  # prefix indicator widget
+wg_prfx=" #[fg=#fe8019,bg=default]#{?client_prefix,<Prefix>,}"
 wg_pane=" #[fg=#504954,bg=default]#{=26:pane_title}"
 wg_date=" #[fg=#504954,bold,italics,bg=default]%d-%b-%Y#[none]"
 wg_time=" #[fg=#504954,bold,bg=default]%H:%M"
 set -g status-right "${wg_prfx}${wg_pane}${wg_date}${wg_time}"
-# }}}
 
-set -g pane-border-style fg=#fe8019
-set -g pane-active-border-style fg=#fe8019
-set -g pane-active-border-style bg=default
