--- a/starship.toml
+++ b/starship.toml
@@ -79,6 +79,8 @@
 # style = "bg:#212736"
 # format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 #
+[python]
+symbol = " "
 # [golang]
 # symbol = ""
 # style = "bg:#212736"
