--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,18 +5,21 @@
     "exclusive": true,
     "passthrough": false,
     "gtk-layer-shell": true,
-    "height": 50,
+    "height": 20,
 
     "modules-left": [
         "custom/launch_wofi",
         "hyprland/workspaces",
         "hyprland/window"
     ],
+
     "modules-center": [
         "custom/weather",
         "clock",
+        // "custom/audio_idle_inhibitor",
         "custom/audio_title"
     ],
+
     "modules-right": [
         "battery",
         "custom/audio_output",
@@ -25,7 +28,11 @@
 
         "custom/light_dark",
         "custom/wallpaper_switcher",
+        "custom/monitor_toggle",
+        "custom/ddcutil_brightness",
         "backlight",
+        // "idle_inhibitor",
+        "custom/gamemode",
 
         "custom/keyboard_layout",
         "tray",
@@ -48,6 +55,20 @@
             "custom/suspend"
         ]
     },
+
+    "custom/gamemode": {
+        "format": "󱔓",
+        "tooltip": false,
+        "on-click": "~/.config/hypr/scripts/gamemode.sh"
+    },
+
+    "custom/monitor_toggle": {
+        "format": "󰍺",
+        // "exec" : "[ \"$(xrandr | grep 'connected' | wc -l)\" -ge 1 ] && echo '󰍺'",
+        "tooltip": false,
+        "on-click": "~/.local/bin/monitor-toggle"
+    },
+
 
     "custom/audio_output": {
         "format": "",
@@ -97,8 +118,22 @@
     },
     "custom/wallpaper_switcher": {
         "format": "",
-        "on-click": "~/.config/hypr/scripts/change_colors.sh -r",
-        "on-click-right": "~/.config/hypr/scripts/change_colors.sh",
+        "on-click": "~/.config/waybar/scripts/change_colors.sh -r",
+        "on-click-right": "~/.config/waybar/scripts/change_colors.sh",
+        "tooltip": false
+    },
+    "custom/ddcutil_brightness": {
+        "format": "󰍹 {}%",
+        "exec": "~/.config/waybar/scripts/ddc_brightness.sh", 
+        "exec-if": "[ $(~/.config/waybar/scripts/num_of_external_monitors.sh) -gt 0 ]",
+        
+        "on-scroll-up": "~/.config/waybar/scripts/ddc_brightness.sh -i 10",
+        "on-scroll-down": "~/.config/waybar/scripts/ddc_brightness.sh -d 10",
+
+        "on-click": "~/.config/waybar/scripts/ddc_brightness.sh -t",
+        "on-click-right": "~/.config/waybar/scripts/ddc_brightness.sh -r",
+
+        "signal": 6,
         "tooltip": false
     },
 
@@ -165,7 +200,7 @@
    "custom/weather": {
         "tooltip" : true,
         "format" : "{}",
-        "interval" : 30,
+        "interval" : 900,
         "on-click": "firefox 'https://www.ilmateenistus.ee/ilm/prognoosid/asukoha-prognoos/?coordinates=58.380052;26.722116'",
         "exec" : "~/.config/waybar/scripts/waybar-wttr.py",
         "return-type" : "json"
@@ -179,8 +214,8 @@
     "clock": {
         "format": "{:%H:%M}",
         "tooltip": true,
-        "tooltip-format": "{: %A, %B %e %Y}"
-        // "on-click": "alacritty --hold -e 'cal'"
+        "tooltip-format": "{: %A, %B %e %Y}",
+        // "on-click": "notify-send \"$($cal -m)\""
     },
 
     "backlight": {
@@ -198,7 +233,8 @@
             "warning": 30,
             "critical": 20
         },
-        "on-click": "~/.config/waybar/scripts/blur_dropshadow_toggle.sh",
+        "on-click": "~/.config/hypr/scripts/blur_dropshadow_toggle.sh",
+        "on-click-right": "~/.config/hypr/scripts/opacity_togglh",
         "format": "{icon} {capacity}%",
         "format-charging": " {capacity}%",
         "format-plugged": " {capacity}%",
@@ -216,6 +252,9 @@
         "scroll-step": 5,
         "format-icons": {
             "headphone": "",
+            "speaker": "󰌢",
+            "hdmi": "󰍹",
+            "hdmi": "󰽟",
             "hands-free": "",
             "headset": "",
             "phone": "",
@@ -234,47 +273,47 @@
         "on-scroll-up": "pamixer --default-source -i 1",
         "on-scroll-down": "pamixer --default-source -d 1",
         "scroll-step": 5
-    }
+    },
+
+   // "idle_inhibitor": {
+   //      "format": "{icon}",
+   //      "format-icons": {
+   //           "activated": "󰒳 ",
+   //           "deactivated": "󰒲 "
+   //      },
+   //      "timeout": 30.5
+   // },
+
+	// "custom/audio_idle_inhibitor": {
+	// 	"format": "{icon}",
+	// 	"exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
+	// 	"exec-if": "which sway-audio-idle-inhibit",
+	// 	"return-type": "json",
+	// 	"format-icons": {
+	// 		"output": "",
+	// 		"input": "",
+	// 		"output-input": "  ",
+	// 		"none": ""
+	// 	}
+	// },
+
+   // "bluetooth": {
+   //      "format": "<U+F294> {status} nrtiern",
+   //      "format-connected": "<U+F294> {device_alias}",
+   //      "format-connected-battery": "<U+F294> {device_alias} {device_battery_percentage}%",
+   //      // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
+   //      "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+   //      "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+   //      "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+   //      "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+   // },
+   // "bluetooth": {
+   //      // "controller": "The Anglerfish", // specify the alias of the controller if there are more than 1 on the system
+   //      "format": "B {status}",
+   //      "format-disabled": "", // an empty format will hide the module
+   //      "format-connected": "<U+F294> {num_connections} connected",
+   //      "tooltip-format": "{controller_alias}\t{controller_address}",
+   //      "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+   //      "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
+   // }
 }
-    
-    // "temperature": {
-    //     "thermal-zone": 1,
-    //     "format": " {temperatureC}°C",
-    //
-    //     "critical-threshold": 70,
-    //     "format-critical": " {temperatureC}°C",
-    //     "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    // }
-    // "cpu": {
-    //     "interval": 10,
-    //     "format": " {usage}%",
-    //     "max-length": 10,
-    //     "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    // },
-    //
-    // "disk": {
-    //     "interval": 30,
-    //     "format": "󰋊 {percentage_used}%",
-    //     "path": "/",
-    //     "tooltip": true,
-    //     "tooltip-format": "HDD - {used} used out of {total} on {path} ({percentage_used}%)",
-    //     "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    // },
-    //
-    // "memory": {
-    //     "interval": 30,
-    //     "format": " {}%",
-    //     "max-length": 10,
-    //     "tooltip": true,
-    //     "tooltip-format": "Memory - {used:0.1f}GB used",
-    //     "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    // },
-    //
-    // "custom/updates": {
-    //     "format": "{}",
-    //     "exec": "~/.config/waybar/scripts/update-sys",
-    //     "on-click": "~/.config/waybar/scripts/update-sys update",
-    //     "interval": 300,
-    //     "tooltip": true
-    // },
-    //
